tests/semantic/fact_cat/fact_cat.err
Error: no valid overloads in file fact_cat.dl at line 7
F(cat("x","y"),"AA").
--^-------------------
1 errors generated, evaluation aborted
